Add missing static dependency to java.management and attempt to guess the need for Graal image code from command line arguments.

--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -158,6 +158,7 @@
                     <requires>java.instrument</requires>
                     <static-requires>
                         jdk.attach,
+                        java.management,
                         com.sun.jna,
                         com.sun.jna.platform
                     </static-requires>
