--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.12.10-SNAPSHOT</version>
+        <version>1.12.10</version>
     </parent>
 
     <artifactId>byte-buddy</artifactId>
@@ -293,7 +293,7 @@
                                         </transformer>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                             <forShade>sources-jar</forShade>
-                                            <manifestEntries/>
+                                            <manifestEntries />
                                         </transformer>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                             <resource>META-INF/LICENSE</resource>
