--- a/pom.xml
+++ b/pom.xml
@@ -69,17 +69,17 @@
         <version.plugin.clean>3.2.0</version.plugin.clean>
         <version.plugin.bundle>5.1.7</version.plugin.bundle>
         <version.plugin.compiler>3.10.1</version.plugin.compiler>
-        <version.plugin.install>3.0.0-M1</version.plugin.install>
-        <version.plugin.deploy>3.0.0-M2</version.plugin.deploy>
+        <version.plugin.install>2.5.2</version.plugin.install>
+        <version.plugin.deploy>2.8.2</version.plugin.deploy>
         <version.plugin.staging>1.6.13</version.plugin.staging>
         <version.plugin.javadoc>3.3.1</version.plugin.javadoc>
         <version.plugin.source>3.0.1</version.plugin.source>
         <version.plugin.shade>3.3.0</version.plugin.shade>
-        <version.plugin.gpg>1.6</version.plugin.gpg>
+        <version.plugin.gpg>3.0.1</version.plugin.gpg>
         <version.plugin.jxr>3.2.0</version.plugin.jxr>
-        <version.plugin.buildhelp>1.12</version.plugin.buildhelp>
+        <version.plugin.buildhelp>3.3.0</version.plugin.buildhelp>
         <version.plugin.jar>3.2.2</version.plugin.jar>
-        <version.plugin.site>4.0.0-M2</version.plugin.site>
+        <version.plugin.site>3.12.0</version.plugin.site>
         <version.plugin.exec>1.6.0</version.plugin.exec>
         <version.plugin.plugin>3.6.4</version.plugin.plugin>
         <version.plugin.release>3.0.0-M6</version.plugin.release>
@@ -404,8 +404,14 @@
                 <version.asm.deprecated>7.1</version.asm.deprecated>
                 <version.plugin.clean>3.0.0</version.plugin.clean>
                 <version.plugin.bundle>2.5.4</version.plugin.bundle>
-                <version.plugin.checkstyle>2.15</version.plugin.checkstyle>
                 <version.plugin.compiler>3.6.2</version.plugin.compiler>
+                <version.plugin.source>2.4</version.plugin.source>
+                <version.plugin.gpg>1.6</version.plugin.gpg>
+                <version.plugin.jxr>2.5</version.plugin.jxr>
+                <version.plugin.buildhelp>3.2.0</version.plugin.buildhelp>
+                <version.plugin.jar>3.0.2</version.plugin.jar>
+                <version.plugin.site>3.7.1</version.plugin.site>
+                <version.plugin.checkstyle>2.15</version.plugin.checkstyle>
                 <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
                 <version.plugin.exec>1.5.0</version.plugin.exec>
                 <version.plugin.plugin>3.5.2</version.plugin.plugin>
@@ -461,6 +467,11 @@
             </activation>
             <properties>
                 <version.plugin.clean>3.1.0</version.plugin.clean>
+                <version.plugin.bundle>3.5.1</version.plugin.bundle>
+                <version.plugin.compiler>3.8.1</version.plugin.compiler>
+                <version.plugin.jxr>3.1.1</version.plugin.jxr>
+                <version.plugin.buildhelp>3.2.0</version.plugin.buildhelp>
+                <version.plugin.site>3.11.0</version.plugin.site>
                 <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
                 <version.plugin.javadoc>3.2.0</version.plugin.javadoc>
                 <version.plugin.japicmp>0.13.1</version.plugin.japicmp>
