--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
         <version.plugin.buildhelp>3.3.0</version.plugin.buildhelp>
         <version.plugin.jar>3.2.2</version.plugin.jar>
         <version.plugin.site>3.12.0</version.plugin.site>
-        <version.plugin.exec>1.6.0</version.plugin.exec>
+        <version.plugin.exec>3.1.0</version.plugin.exec>
         <version.plugin.plugin>3.6.4</version.plugin.plugin>
-        <version.plugin.release>3.0.0-M6</version.plugin.release>
+        <version.plugin.release>2.5.3</version.plugin.release>
         <version.plugin.resources>3.2.0</version.plugin.resources>
-        <version.plugin.surefire>3.0.0-M7</version.plugin.surefire>
+        <version.plugin.surefire>2.22.2</version.plugin.surefire>
         <version.plugin.pitest>1.9.2</version.plugin.pitest>
         <version.plugin.animal-sniffer>1.21</version.plugin.animal-sniffer>
         <version.plugin.enforcer>3.1.0</version.plugin.enforcer>
@@ -95,8 +95,9 @@
         <version.plugin.clirr>2.8</version.plugin.clirr>
         <version.plugin.spotbugs>4.7.1.0</version.plugin.spotbugs>
         <version.plugin.modulemaker>1.8-SNAPSHOT</version.plugin.modulemaker>
-        <version.plugin.license>4.2.rc3</version.plugin.license>
-        <version.plugin.japicmp>0.15.3</version.plugin.japicmp>
+        <version.plugin.license>4.1</version.plugin.license>
+        <version.plugin.japicmp>0.15.7</version.plugin.japicmp>
+        <version.plugin.antrun>3.1.0</version.plugin.antrun>
         <version.checkstyle>9.3</version.checkstyle>
         <version.android.sdk>4.1.1.4</version.android.sdk>
         <version.utility.findbugs>3.0.1</version.utility.findbugs>
@@ -411,13 +412,21 @@
                 <version.plugin.buildhelp>3.2.0</version.plugin.buildhelp>
                 <version.plugin.jar>3.0.2</version.plugin.jar>
                 <version.plugin.site>3.7.1</version.plugin.site>
-                <version.plugin.checkstyle>2.15</version.plugin.checkstyle>
-                <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
                 <version.plugin.exec>1.5.0</version.plugin.exec>
                 <version.plugin.plugin>3.5.2</version.plugin.plugin>
+                <version.plugin.resources>3.0.2</version.plugin.resources>
+                <version.plugin.animal-sniffer>1.16</version.plugin.animal-sniffer>
+                <version.plugin.enforcer>1.4.1</version.plugin.enforcer>
+                <version.plugin.jacoco>0.7.9</version.plugin.jacoco>
+                <version.plugin.checkstyle>2.15</version.plugin.checkstyle>
+                <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
+                <version.plugin.clirr>2.7</version.plugin.clirr>
+                <version.plugin.license>3.0</version.plugin.license>
                 <version.plugin.shade>3.1.1</version.plugin.shade>
                 <version.plugin.surefire>2.22.1</version.plugin.surefire>
                 <version.plugin.javadoc>2.10.4</version.plugin.javadoc>
+                <version.plugin.antrun>1.8</version.plugin.antrun>
+                <version.checkstyle>6.2</version.checkstyle>
                 <spotbugs.skip>true</spotbugs.skip>
             </properties>
             <modules>
@@ -474,8 +483,14 @@
                 <version.plugin.site>3.11.0</version.plugin.site>
                 <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
                 <version.plugin.javadoc>3.2.0</version.plugin.javadoc>
+                <version.plugin.animal-sniffer>1.19</version.plugin.animal-sniffer>
+                <version.plugin.enforcer>1.4.1</version.plugin.enforcer>
+                <version.plugin.jacoco>0.7.9</version.plugin.jacoco>
+                <version.plugin.checkstyle>3.0.0</version.plugin.checkstyle>
                 <version.plugin.japicmp>0.13.1</version.plugin.japicmp>
                 <version.plugin.shade>3.2.4</version.plugin.shade>
+                <version.plugin.antrun>3.0.0</version.plugin.antrun>
+                <version.checkstyle>6.19</version.checkstyle>
                 <spotbugs.skip>true</spotbugs.skip>
             </properties>
         </profile>
